Aula mudando a cara do TODO

--- a/src/Todo.css
+++ b/src/Todo.css
@@ -1,10 +1,30 @@
+img{
+    width: 30px;
+}
+ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
 .container{
     margin: auto;
-    max-width: 900px;
+    max-width: 600px;
 }
 .done{
     text-decoration: line-through;
 }
-img{
-    width: 30px;
+.item{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 30px;
+    margin-top: 15px;
+    padding: 15px;    
+    border-radius: 10px;
 }
+.card{
+    box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.2);
+    /*BOX SHADOW =  deslocamento na horizontal\ deslocamento na vertical\ blur \ "espalhar" \ cor da sombra*/
+}
+
