--- a/src/Todo.css
+++ b/src/Todo.css
@@ -115,10 +115,14 @@ li:nth-child(4n + 3){
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     background-color: white;
     margin-right: 10px;
-    width: 100px;
-    height: 30px;
+    width: 130px;
+    height: 50px;
     font-family: 'Play', sans-serif;
     font-weight: 700;
+}
+.botoesprincipais:hover{
+    transition: 300ms;
+    transform: scale(1.15);
 }
 .buttonIcons{
     margin-left: 5px;
@@ -130,8 +134,11 @@ li:nth-child(4n + 3){
     height: 30px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     /* font-family: 'Play', sans-serif; */
-    font-weight: 700;
-    
+    font-weight: 700;    
+}
+.buttonIcons:hover{
+    transition: 300ms;
+    transform: scale(1.3);
 }
 
 #input{
@@ -139,8 +146,9 @@ li:nth-child(4n + 3){
     border-radius: 6px;
     margin-bottom: 10px;
     margin-right: 30px;
-    height: 30px;
+    height: 46px;
     opacity: 0.78;
+    font-size: 20px;
     /* box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; */
 }
 .credits{
@@ -183,8 +191,10 @@ li:nth-child(4n + 3){
         background-position-y: top;
     }
     #input{
-        width: 180px;
-        margin-right: 10px;
+        width: 160px;
+        height: 30px;
+        margin-right: 2px;
+        font-size: 15px;
     }
     .botoesprincipais{
         margin-right: 2px;
