--- a/src/Todo.css
+++ b/src/Todo.css
@@ -39,6 +39,13 @@ ul{
 a{
     color: white;
 }
+a:hover{
+    color: red;
+  }
+p{
+    margin: 0;
+    padding: 0;
+}
 .container{
     margin: auto;
     max-width: 900px;
